# zyplux

./: .fallowrc.json  .gitignore  .jscpd.json  CLAUDE.md  README.md  apt.toml  apt_runner.py  cerberus.toml  eslint.config.ts  graph.json  just  justfile  knip.json  knip.prod.json  package.json  prettier.config.ts  pyproject.toml  pyrefly.toml  release-targets.toml  ruff.toml  tsconfig.json  vitest.config.ts
.antigravitycli/: 35f19202-eadc-4514-854c-96a92f8c8bc7.json
.github/: CODEOWNERS  README.md  copilot-instructions.md  settings.yml
.github/rulesets/: copilot-code-review.json  default-branch-baseline.json
.github/workflows/: bootstrap-npm.yml  ci.yml  copilot-review-gate.yml  release.yml
apps/cerberus/: README.md  pyproject.toml
apps/cerberus/src/cerberus/: __init__.py  _version.py  baseline.just  cerberus.toml  cli.py  config.py  context.py  justfile.py  model.py  proc.py  registries.py  source.py  tool_pins.py  workflow.py  workspaces.py
apps/cerberus/src/cerberus/bites/: __init__.py  catalog_pinned_deps_bite.py  ci_cerberus_step_bite.py  ci_check_sequence_bite.py  ci_workflow_gate_bite.py  cli_py_test_seam_bite.py  cli_ts_test_seam_bite.py  codeowners_coverage_bite.py  fallow_analyzer_bite.py  fallow_bite.py  fixture_roles_ts_bite.py  jscpd_bite.py  jscpd_dupes_threshold_bite.py  justfile_baseline_bite.py  justfile_bite.py  knip_bite.py  knip_standalone_config_bite.py  lib_py_test_seam_bite.py  lib_ts_test_seam_bite.py  line_length_120_bite.py  line_length_bite.py  py_test_seam.py  py_tool_config.py  pyrefly_bite.py  pytest_bite.py  pytest_coverage_floor_bite.py  registry.py  release_surface_version_bump_bite.py  ruff_bite.py  ruff_select_all_bite.py  rumdl_bite.py  story_docs.py  story_tests_lockstep_py_bite.py  story_tests_lockstep_ts_bite.py  test_seam.py  tool_pins_latest_bite.py  tsc_bite.py  vitest_bite.py  vitest_only_runner_bite.py  workflow_toolchain_only_bite.py  (+1 more)
apps/cerberus/src/cerberus/checks/: __init__.py  catalog_discipline_check.py  cerberus_step_check.py  ci_sequence_check.py  ci_workflow_check.py  cli_py_tests_check.py  codeowners_check.py  fallow_analyzer_check.py  jscpd_dupes_threshold_check.py  justfile_check.py  knip_config_check.py  lib_py_tests_check.py  lib_ts_tests_check.py  line_length_check.py  max_duplication_check.py  no_dead_code_check.py  py_test_seam.py  py_tool_config.py  pyrefly_config_check.py  pytest_coverage_check.py  registry.py  release_bumps_check.py  ruff_config_check.py  rumdl_config_check.py  story_docs.py  test_seam.py  ts_project_references_check.py  vitest_coverage_check.py  vitest_runner_check.py  workflow_tooling_check.py  zyplux_latest_check.py
apps/cerberus/src/cerberus/graph/: __init__.py  build.py  explain.py  ids.py  load.py  model.py  parse.py  query.py  report.py  resolve_python.py  resolve_ts.py  search.py
apps/clipy/: README.md  pyproject.toml
apps/clipy/src/clipy/: ctop.py  justpty.py
apps/cz/: README.md  package.json  tsconfig.json
apps/czyp/: README.md  package.json  (+1 more)
apps/token_stats/: README.md  pyproject.toml
apps/token_stats/src/token_stats/: __init__.py  ast_metrics.py  cli.py  profile.py  segment.py  tokenizers.py
apps/totchef/: .gitignore  .rumdl.toml  CLAUDE.md  README.md  eslint.config.ts  justfile  package.json  prettier.config.ts  pyproject.toml  tsconfig.json  tsconfig.tooling.json
apps/totchef/.github/: copilot-instructions.md
apps/totchef/.github/workflows/: ci.yml
apps/totchef/docs/issues/code-insiders-portal-share-screen-popup/: investigation.md  root-cause.md
apps/totchef/docs/issues/laptop-rendering-sluggishness/: investigation.md
apps/totchef/docs/issues/laptop-rendering-sluggishness/brave-gpu-reports/: about-gpu-2026-05-24T10-05-28-977Z.txt  about-gpu-2026-05-24T11-00-36-939Z.txt  about-gpu-2026-06-06T18-55-25-432Z.txt
apps/totchef/docs/issues/sleep-crash/: sleep-crash.md
apps/totchef/docs/issues/templates/: investigation.md
apps/totchef/docs/roadmap/: next.md
apps/totchef/docs/wiki/: wayland.md
apps/totchef/docs/wiki/brave/: brave-flags-default-dump.json
apps/totchef/examples/: totchef_recipe.toml
apps/totchef/examples/totchef_cooks/: chezmoi_cook.py
apps/totchef/examples/totchef_files/: ctop.py  egpu-prime-switch.py  write-if-changed.py
apps/totchef/src/totchef/: __init__.py  __main__.py  cli.py  cook_base.py  cook_runner.py  harness.py  log_pump.py  logs.py  recipe.py  recipe_graph.py  recipe_types.py  registry.py  removal_watch.py  schema_lint.py  shell.py  terminal.py
apps/totchef/src/totchef/cooks/: __init__.py  apt_pkg_root_cook.py  apt_repo_root_cook.py  bash_cook.py  bin_cook_base.py  bun_cook.py  cargo_cook.py  chromium_flags_cook.py  conf_cook.py  desktop_cook.py  file_cook.py  local_bin_cook.py  local_bin_dir_cook.py  settings_cook.py  skills_cook.py  snap_root_cook.py  url_cook.py  usr_local_bin_root_cook.py  usr_local_sbin_root_cook.py  uv_cook.py
apps/totchef/tests/project/: test_user_stories.py
apps/totchef/tests/stories/: 3_managing_packages.md  5_configuring_system_state.md  8_observing_a_run.md  9_extending_totchef.md  README.md  arrange_fixtures.py  assert_fixtures.py  test_10_recipe_linting_rules.py  test_11_managing_dotfiles.py  test_1_running_totchef.py  test_3_managing_packages.py  test_4_package_manager_wrappers.py  test_7_safety_correctness_and_trust.py
docs/: ci-intent.md
examples/: recipe.toml  totchef_recipe.toml
files/: 99-trusted-gpgd-autounlock  ubuntu-archives.pref
plan/: unified-install-toml.md
projects/: portal-share-screen-popup.md
scripts/: pusher.ts  release.ts  shell-harness.ts  util.ts
src/: apps_config.toml  apt_config.toml  cargo_config.toml  chef.py  configure_apps.py  configure_gpu.py  configure_with_apt.py  cook_base.py  cook_runner.py  harness.py  install.toml  install_cargo_packages.py  install_from_urls.py  install_uv_packages.py  logs.py  main.py  perf.toml  recipe_graph.py  run_apps_conf.py  schema_lint.py  terminal.py  url_config.toml  uv_config.toml
tests/: conftest.py  test_chef.py  test_cook_runner.py  test_harness.py  test_output_parsers.py  test_rewrite_exec.py
(+449 files in other folders)
