[project]
name = "zyplux"
version = "0"
description = "zyplux — virtual workspace root (cerberus governance CLI + @zyplux/eslint-config)"
requires-python = ">=3.14"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["apps/cerberus", "packages/util_py"]

[tool.pytest.ini_options]
addopts = "--cov=cerberus --cov-report=term-missing"
testpaths = ["tests/cerberus"]

[tool.coverage.report]
fail_under = 90

[tool.vulture]
paths = ["apps/cerberus/src", "packages/util_py/src", "tests/cerberus"]
ignore_decorators = ["@app.command"]
ignore_names = ["pytestmark"]

[dependency-groups]
lint = [
    "ruff>=0.15.20",
    "rumdl>=0.2.28",
    "vulture>=2.16",
]
test = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
type = [
    "pyrefly>=1.1.1",
    "types-networkx>=3.6.1.20260624",
    "types-pyyaml>=6.0.12.20260518",
]
