[project]
name = "zyplux"
version = "0"
description = "zyplux — virtual workspace root (cerberus governance CLI + @zyplux/eslint-config)"
requires-python = ">=3.14"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["apps/cerberus", "apps/totchef", "packages/util_py"]

[tool.pytest.ini_options]
addopts = "-n auto --cov=cerberus --cov=totchef --cov-report=term-missing"
testpaths = ["tests/cerberus", "tests/totchef"]

[tool.coverage.report]
fail_under = 90

[tool.vulture]
paths = ["apps/cerberus/src", "apps/totchef/src", "packages/util_py/src", "tests/cerberus", "tests/totchef"]
ignore_decorators = ["@app.command", "@app.callback", "@model_validator"]
# Cooks are resolved by entry point / config-dir convention (totchef.registry), so vulture
# sees no static reference and reports every cook class as dead — they're totchef's plugins,
# not dead code. `model_config` is read by pydantic's model metaclass, never called by name.
ignore_names = ["pytestmark", "*Cook", "model_config"]

[dependency-groups]
lint = [
    "ruff>=0.15.20",
    "rumdl>=0.2.28",
    "vulture>=2.16",
]
test = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "tomli-w>=1.2.0",
]
type = [
    "pyrefly>=1.1.1",
    "types-networkx>=3.6.1.20260624",
    "types-pyyaml>=6.0.12.20260518",
    # psutil/websockets back the standalone apps/totchef/examples/totchef_files/ctop.py script,
    # which carries its own inline `# dependencies` and runs via `uv run --script`. They live
    # here only so pyrefly can resolve ctop.py's imports; types-psutil supplies psutil's stubs.
    "psutil>=7.2.2",
    "websockets>=16.0",
    "types-psutil>=7.2.2.20260518",
]
