[project]
name = "zyplux"
version = "0"
description = "zyplux — virtual workspace root (cerberus governance CLI + @zyplux/eslint-config)"
requires-python = ">=3.14"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["apps/cerberus", "apps/clipy", "apps/totchef", "apps/token_stats", "packages/util_py"]

[tool.pytest.ini_options]
addopts = "-n auto --cov=cerberus --cov=clipy --cov=totchef --cov=token_stats --cov-report=term-missing"
testpaths = ["tests/cerberus", "tests/clipy", "tests/totchef", "tests/token_stats"]
markers = ["no_xdist: run this test outside the xdist worker pool (see tests/conftest.py)"]

[tool.coverage.report]
fail_under = 90

[tool.vulture]
paths = [
    "apps/cerberus/src",
    "apps/clipy/src",
    "apps/totchef/src",
    "apps/token_stats/src",
    "packages/util_py/src",
    "tests/cerberus",
    "tests/clipy",
    "tests/totchef",
    "tests/token_stats",
]
ignore_decorators = ["@app.command", "@app.callback", "@model_validator"]
# Cooks are resolved by entry point / config-dir convention (totchef.registry), so vulture
# sees no static reference and reports every cook class as dead — they're totchef's plugins,
# not dead code. `model_config` is read by pydantic's model metaclass, never called by name.
ignore_names = ["pytestmark", "*Cook", "model_config", "_fake_tokenizer_backend", "_restore_signal_handlers"]

[dependency-groups]
lint = [
    "ruff>=0.15.20",
    "rumdl>=0.2.28",
    "vulture>=2.16",
]
test = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "tomli-w>=1.2.0",
]
type = [
    "pyrefly>=1.1.1",
    "types-networkx>=3.6.1.20260624",
    "types-pyyaml>=6.0.12.20260518",
    # psutil ships no type stubs of its own; apps/clipy's ctop.py needs this to resolve them.
    "types-psutil>=7.2.2.20260518",
]
