[project]
name = "token-stats"
version = "0.0.1"
description = "Profile how differently tokenizers and the native compiler count a Python codebase's tokens."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.5.1",
    "pathspec>=1.1.1",
    "polars>=1.35.2",
    "tiktoken>=0.13.0",
    "typer>=0.26.8",
]

[project.scripts]
token-stats = "token_stats.cli:app"

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "token_stats"
module-root = "src"
